docker/front_envoy/front-envoy.yml
---
listeners:
  address: tcp://0.0.0.0:80
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      config:
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: frontend
            domains:
            - "*"
            routes:
            - match:
                prefix: "/app/1/"
              route:
                cluster: app1
                prefix_rewrite: "/"
            - match:
                prefix: "/app/2/"
              route:
                cluster: app2
                prefix_rewrite: "/"
        http_filters:
        - name: envoy.router
          config: {}
cluster_manager:
  clusters:
  - name: app1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: app1
        port_value: 4567
  - name: app2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: app2
        port_value: 4568
  - name: zipkin
    connect_timeout_ms: 1s
    type: strict_dns
    lb_type: round_robin
    hosts:
    - url: tcp://zipkin:9411
admin:
  access_log_path: "/var/log/envoy.log"
  address: tcp://0.0.0.0:8001
tracing:
  http:
    driver:
      type: zipkin
      config:
        collector_cluster: zipkin
        collector_endpoint: "/api/v1/spans"
